--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <!-- brand -->
             <a class="navbar-brand" href="#">
-                Zack Rudin
+                Zack Rudinn
             </a>
 
             <!-- button for collapsed behavior -->
