--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <!-- brand -->
             <a class="navbar-brand" href="#">
-                Zack Rudinn
+                Zack Rudin
             </a>
 
             <!-- button for collapsed behavior -->
@@ -31,7 +31,7 @@
                         <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#">About</a>
                     </li>
                 </ul>
             </div>
