--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         </div>        
     </div>
 
-    <div class="alert alert-primary" role="alert">
-        omg look at me i have a website
+    <div class="container" id="temp">
+        <div class="alert alert-primary" role="alert">
+            omg look at me i have a website
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
