changed wording on button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <h2>there will be stuff here soon.</h2>
         <button type="button" id="moreButton" class="btn btn-dark">more</button>
-        <button type="button" id="secretButton" class="btn btn-dark" disabled>this button makes me look professional</button>
+        <button type="button" id="secretButton" class="btn btn-dark" disabled>i put this button here to make me look professional</button>
 
     </div>
 
